--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
             <div id="formulario">
                 <h1>Login</h1>
                 <p>Seja bem-vindo(a) novamente. Faça login para acessar sua e poder fazer as configurações no seu ambiente.</p>
-                <form action="" method="post" autocomplete="on"></form>
+                <form action="login.php" method="post" autocomplete="on">
+                
+                </form>
             </div>
         </section>
     </main>
