Edição da pagina de estilos principal

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <link rel="stylesheet" href="estilos/media-query.css">
 </head>
 <body>
-    <main>
-        <section id="login">
+    <main class="container">
+        <section id="login" class="item">
             <div id="imagem">
                 <!--Aqui vai uma imagem no CSS-->
             </div>
